Alterações no index.html
Alteração do link do instagram.
Ocultei o PHP das skills por enquanto.
Corrigi a ortografia do email do placeholder nos contatos.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <ul class="apresentacao__redesSociais">
                             <li><a href="https://github.com/JulianaMCamargo" class="apresentacao__redesSociais-links"><i class="fa-brands fa-github apresentacao__redesSociais-icones "></i></a></li>
                             <li><a href="https://www.linkedin.com/in/juliana-camargo-636669197/" class="apresentacao__redesSociais-links"><i class="fa-brands fa-linkedin apresentacao__redesSociais-icones"></i></a></li>  
-                            <li><a href="https://www.instagram.com/ju.mcamargo/" class="apresentacao__redesSociais-links"><i class="fa-brands fa-instagram apresentacao__redesSociais-icones"></i></a></li>
+                            <li><a href="https://www.instagram.com/eng.julianacamargo/" class="apresentacao__redesSociais-links"><i class="fa-brands fa-instagram apresentacao__redesSociais-icones"></i></a></li>
                         </ul>
                     </nav>
                 </div>
@@ -94,12 +94,12 @@
                             <figcaption class="skills__itens-texto">JavaScript</figcaption>
                         </figure>
                     </li>
-                    <li class="skills__itens">
+                    <!-- <li class="skills__itens">
                         <figure>
                             <i class="fa-brands fa-php hobbies__itens-icones"></i>
                             <figcaption class="skills__itens-texto">PHP</figcaption>
                         </figure>
-                    </li>
+                    </li> -->
                     <li class="skills__itens">
                         <figure>
                             <i class="fa-brands fa-node hobbies__itens-icones"></i>
@@ -225,7 +225,7 @@
                         
                         <div class="contato__formulario-itens">
                             <label for="email">Email</label>
-                            <input type="email" id="email" name="email" placeholder="andrelisnboa@contato.com" required>
+                            <input type="email" id="email" name="email" placeholder="andrelisboa@contato.com" required>
                             <spam class="mensagem-erro"></spam>
                         </div>
                         
