Adicionando caminho do arquivo envia-email.js

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <footer class="rodape">
             <h9>Desenvolvido por Juliana Camargo</br>2023</h9>
         </footer>
-        <script src="main.js" type="module"></script>
+        <script src="assets/app/envia-email.js" type="module"></script>
         <script src="assets/app/valida-forms-contato.js"></script>
     </body>
 
